# agency-agents

./: .env.example  .git_push.py  .gitignore  ARCHITECTURE.md  Agency-OS.html  CLAUDE.md  Dockerfile  PR_TRIAGE_ANALYSIS.md  README.md  README_CLAUDE.md  REAL_ESTATE_SWARM.md  SAHIL_ORCHESTRATOR_MANIFEST.md  SECURITY_AUDIT_QUICK_REFERENCE.md  SECURITY_AUDIT_SWARM.md  Scraping-OS.html  a2a_protocol.py  a2a_server.py  agency.py  agency_os_server.py  agency_ui.html  agency_viz.html  agent-card.json  agi_director.py  api_server.py  capability_ontology.py  docker-compose.yml  ecosystem-start.sh  ecosystem-stop.sh  ecosystem.py  evolution_scheduler.py  evolve_three.py  explorer_loop.py  install.bat  install.sh  live_run.py  live_server.py  mcp_registry.py  mcp_tools.py  meta_spawner.py  mission_control.py  (+23 more)
.github/: dependabot.yml
agency-os-app/: Dockerfile  docker-compose.yml  next.config.js  package-lock.json  package.json  ws-server.ts
business/: business-analytics-agent.md  business-content-agent.md  business-marketing-agent.md  business-operations-agent.md  business-sales-agent.md
cloudflare/: package-lock.json  package.json  schema.sql  setup-cf.sh  tsconfig.json  wrangler.jsonc
config/: api_keys.json
dashboard/: README.md  next.config.js  package.json  tailwind.config.js
data/: audit.jsonl  audit.txt  swarm_bus.db  swarm_memory.db  swarm_state.db
deepagents/: GETTING_STARTED.md
deepagents_repo/examples/nvidia_deep_agent/: README.md  pyproject.toml
deepagents_repo/examples/nvidia_deep_agent/src/: agent.py  backend.py
design/: accounts-payable-os.md
(+606 files in other folders)
